# InfiniteSight2

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
cmake/: FindVIPS.cmake
src/: ExifParser.cpp  ExifParser.h  ImageCache.cpp  ImageCache.h  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  SettingsManager.cpp  SettingsManager.h  SettingsWindow.cpp  SettingsWindow.h  main.cpp
